--- a/pyesasky/nbextension/static/esasky.html
+++ b/pyesasky/nbextension/static/esasky.html
@@ -11,40 +11,40 @@
 <meta name="apple-mobile-web-app-capable" content="no">
 <meta name="theme-color" content="#808080">
 
-<link rel="shortcut icon" href="http://sky-int.esac.esa.int/images/favicon.ico" type="image/x-icon" />
-<link type="text/css" rel="stylesheet" href="http://sky-int.esac.esa.int/index.css">
-<link type="text/css" rel="stylesheet" href="http://sky-int.esac.esa.int/js/colorpicker/colorpicker.css">
-<link type="text/css" rel="stylesheet" href="http://sky-int.esac.esa.int/js/sliderSelector/sliderSelector.css">
-<link type="text/css" rel="stylesheet" href="http://sky-int.esac.esa.int/js/datepicker/datepicker.css">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+<link type="text/css" rel="stylesheet" href="css/index.css">
+<link type="text/css" rel="stylesheet" href="css/colorpicker.css">
+<link type="text/css" rel="stylesheet" href="css/sliderSelector.css">
+<link type="text/css" rel="stylesheet" href="css/datepicker.css">
 
 <title>ESASky 2.3.beta</title>
 
 <script type="text/javascript" src="js/config.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/highcharts/5.0.12/highcharts.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/highcharts/5.0.12/highcharts-more.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/highcharts/5.0.12/modules/treemap.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/resizeEvents/ElementQueries.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/resizeEvents/ResizeSensor.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/colorpicker/colorpicker.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/sliderSelector/sliderSelector.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/datepicker/datepicker.min.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/api/api.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/esaskyweb_V2_3_beta_B10.nocache.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/firebugx.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/aladinMobile.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/v2-latest-aladin.ext.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/aladin-addon.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/swfupload.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/swfupload.speed.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/samp-2.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/json2.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/flXHR.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/flensed.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/checkplayer.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/swfobject.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/esaskyweb_V2_3_beta_B10/esasky-samp.js"></script>
-<script type="text/javascript" src="http://sky-int.esac.esa.int/js/google-analytics-config.js"></script>
+<script type="text/javascript" src="js/jquery/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/highcharts/highcharts.js"></script>
+<script type="text/javascript" src="js/highcharts/highcharts-more.js"></script>
+<script type="text/javascript" src="js/highcharts/treemap.js"></script>
+<script type="text/javascript" src="js/resizeEvents/ElementQueries.js"></script>
+<script type="text/javascript" src="js/resizeEvents/ResizeSensor.js"></script>
+<script type="text/javascript" src="js/colorpicker/colorpicker.js"></script>
+<script type="text/javascript" src="js/sliderSelector/sliderSelector.js"></script>
+<script type="text/javascript" src="js/datepicker/datepicker.min.js"></script>
+<script type="text/javascript" src="js/api/api.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/esaskyweb_V2_3_beta_B10.nocache.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/firebugx.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/aladinMobile.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/v2-latest-aladin.ext.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/aladin-addon.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/swfupload.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/swfupload.speed.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/samp-2.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/json2.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/flXHR.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/flensed.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/checkplayer.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/swfobject.js"></script>
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/esasky-samp.js"></script>
+<script type="text/javascript" src="js/google-analytics-config.js"></script>
 
 <script type="text/javascript">
 	var timer = setTimeout(tellUserAboutReload, 30000);
@@ -107,11 +107,11 @@
 
     <div id="esa-logo">
 
-        <img src="http://sky-int.esac.esa.int/images/main-esa-logo.png" id="esa-logo-image" /> <br /> <br />
+        <img src="images/main-esa-logo.png" id="esa-logo-image" /> <br /> <br />
 
         <div id="loading" style="color: white; font-family: Arial Unicode MS, Arial, sans-serif;">
 
-            <img src="http://sky-int.esac.esa.int/images/loading.gif" /> &nbsp;&nbsp;Loading ESASky 2.3.beta
+            <img src="images/loading.gif" /> &nbsp;&nbsp;Loading ESASky 2.3.beta
 
         </div>
 
@@ -125,32 +125,7 @@
 
 <script type="text/javascript">
 
-function test(){ 
-	alert ("ciao"); 
-} 
-module.exports = test;
 </script>
 </body>
 
 </html>
-
-
-
-
-
-
-<!-- <html> -->
-<!-- <head></head> -->
-
-<!-- <body> -->
-
-
-
-<!-- <div style='width: 100px; height: 50px; background-color: blue; color: green;'> -->
-<!--     <p>Ciao ciao</p> -->
-<!-- </div> -->
-
-
-<!-- </body> -->
-
-<!-- </html> -->
