Astroquery Table handling

--- a/pyesasky/nbextension/static/esasky.html
+++ b/pyesasky/nbextension/static/esasky.html
@@ -30,7 +30,8 @@
 <script type="text/javascript" src="js/sliderSelector/sliderSelector.js"></script>
 <script type="text/javascript" src="js/datepicker/datepicker.min.js"></script>
 <script type="text/javascript" src="js/api/api.js"></script>
-<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/esaskyweb_V2_3_beta_B10.nocache.js"></script>
+<!--<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/esaskyweb_V2_3_beta_B10.nocache.js"></script>-->
+<script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/esaskyweb_V2_3_B10.nocache.js"></script>
 <script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/firebugx.js"></script>
 <script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/aladinMobile.js"></script>
 <script type="text/javascript" src="js/esaskyweb_V2_3_beta_B10/v2-latest-aladin.ext.js"></script>
